--- a/SchoolTestManagementApp/ClientApp/src/Pages/Student/Dashboard.css
+++ b/SchoolTestManagementApp/ClientApp/src/Pages/Student/Dashboard.css
@@ -9,7 +9,7 @@
   height: 100%;
   padding: 10px 20px;
   text-align: center;
-  background: #7e95be;
+  /* background: #7e95be; */
   flex: 0.5;
 }
 
