Work on design test

--- a/SchoolTestManagementApp/ClientApp/src/Components/NavMenu/NavMenu.css
+++ b/SchoolTestManagementApp/ClientApp/src/Components/NavMenu/NavMenu.css
@@ -3,7 +3,7 @@
   height: 82px;
   left: 0;
   top: 0;
-  background-color: #211f1f;
+  background: #211f1f;
   position: fixed;
   padding: 19px 20px;
   z-index: 10;
