--- a/SchoolTestManagementApp/ClientApp/src/Components/Core/Button/Button.css
+++ b/SchoolTestManagementApp/ClientApp/src/Components/Core/Button/Button.css
@@ -1,14 +1,14 @@
 .btn-outlined {
   width: 100%;
-  color: #13c7d5;
+  color: #5794c9;
   background: none;
-  border: 3px solid #13c7d5;
+  border: 3px solid #5794c9;
   padding: 5px 10px;
   transition: all 0.3s linear;
 }
 .btn-outlined:hover,
 .btn-outlined:active {
-  background: #13c7d5;
+  background: #5794c9;
   color: white;
 }
 
@@ -22,23 +22,18 @@
 }
 .btn-outlined-white:hover,
 .btn-outlined-white:active {
-  border: 3px solid #13c7d5;
-  color: #13c7d5;
+  border: 3px solid #3d4652;
+  color: #3d4652;
 }
 
 .btn-filled {
   width: 100%;
-  background-color: #13c7d5;
+  background-color: #3d4652;
   padding: 5px 10px;
   color: white;
   border: 1px solid white;
   transition: all 0.3s linear;
 }
-
-/* .btn-filled:hover,
-.btn-filled:active {
-  color: white;
-} */
 
 .btn-filled-red {
   padding: 5px 10px;
