--- a/SchoolTestManagementApp/ClientApp/src/Components/Students/Card/CardInfo/CardInfo.css
+++ b/SchoolTestManagementApp/ClientApp/src/Components/Students/Card/CardInfo/CardInfo.css
@@ -15,6 +15,11 @@
   padding-top: 15px;
 }
 
+.card-content-details span {
+  font-weight: 100;
+  font-size: 19px;
+}
+
 .card-tests {
   width: 100%;
   height: 40vh;
