--- a/SchoolTestManagementApp/ClientApp/src/Components/Students/Card/CardInfo/Table/Table.css
+++ b/SchoolTestManagementApp/ClientApp/src/Components/Students/Card/CardInfo/Table/Table.css
@@ -6,6 +6,15 @@
   position: absolute;
 }
 
+.table-spinner {
+  color: white;
+}
+
+.table-tests-empty {
+  font-size: 25px;
+  color: white;
+}
+
 table {
   width: 100%;
   position: relative;
@@ -20,4 +29,12 @@ th {
 
 td {
   color: white;
+}
+
+.isDone-check {
+  color: green;
+}
+
+.isDone-false {
+  color: red;
 }
