--- a/SchoolTestManagementApp/ClientApp/src/Components/Tests/TestCreate/TestCreate.css
+++ b/SchoolTestManagementApp/ClientApp/src/Components/Tests/TestCreate/TestCreate.css
@@ -1,24 +1,25 @@
-.test-create-layout {
-  width: 100%;
-}
-
 .test-create-form {
-  width: 80%;
+  width: 60%;
   height: 100%;
+  padding: 10px 0;
   margin: 0 auto;
   display: flex;
   flex-flow: column;
 }
 
-.test-create-form input {
-  margin-bottom: 26px;
+.test-create-form span {
+  height: 2vh;
+  margin-bottom: 5px;
 }
 
-.test-create-form select {
-  margin-bottom: 26px;
+.test-create-input {
+  border: 2px solid transparent;
+}
+
+.test-create-input-error {
+  border: 2px solid red;
 }
 
 .test-create-form Button {
-  width: 20%;
-  margin: 20px auto;
+  margin-top: 10px;
 }
