--- a/SchoolTestManagementApp/ClientApp/src/Components/Tests/TestCreate/TestDesign/TestDesign.css
+++ b/SchoolTestManagementApp/ClientApp/src/Components/Tests/TestCreate/TestDesign/TestDesign.css
@@ -1,6 +1,7 @@
 .test {
   width: 100%;
   height: 100%;
+  background: #5794c9;
 }
 
 .test-modal-confirm Button {
@@ -25,12 +26,6 @@
 
 .question-type {
   padding: 2px 0;
-}
-
-.question-config Button {
-  font-size: 14px;
-  padding: 2px 4px;
-  margin: 0 10px;
 }
 
 .question-lists-view {
