--- a/SchoolTestManagementApp/ClientApp/src/Pages/Teacher/Dashboard.css
+++ b/SchoolTestManagementApp/ClientApp/src/Pages/Teacher/Dashboard.css
@@ -37,20 +37,23 @@
 }
 
 .toggle-left {
-  text-align: center;
   font-size: 30px;
   margin: 20px;
-  cursor: pointer;
-  transition: all 0.5s linear;
-  transform: rotate(0deg);
 }
 
 .toggle-left :hover,
 .toggle-left :active {
+  cursor: pointer;
   color: white;
 }
 
-.show-toggle-left {
+.toggle-left-content {
+  text-align: center;
+  transition: transform 0.5s linear;
+  transform: rotate(0deg);
+}
+
+.show-toggle-left-content {
   text-align: right;
   transform: rotate(180deg);
 }
