--- a/SchoolTestManagementApp/ClientApp/src/Components/Tests/DesignTest/Options/Questions/Questions.css
+++ b/SchoolTestManagementApp/ClientApp/src/Components/Tests/DesignTest/Options/Questions/Questions.css
@@ -91,6 +91,14 @@
   grid-template-rows: auto auto;
 }
 
+.questions-list-empty {
+  flex: 0.8;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+}
+
 .questions-btn {
   display: flex;
   float: right;
