--- a/SchoolTestManagementApp/ClientApp/src/Components/Search/Search.css
+++ b/SchoolTestManagementApp/ClientApp/src/Components/Search/Search.css
@@ -5,7 +5,7 @@
 .search-content label {
   font-size: 24px;
   margin-bottom: 0;
-  color: #5794c9;
+  color: #3d4652;
 }
 
 .search-content input {
