--- a/SchoolTestManagementApp/ClientApp/src/Components/Tests/Test/OptionQuestion/OptionQuestion.css
+++ b/SchoolTestManagementApp/ClientApp/src/Components/Tests/Test/OptionQuestion/OptionQuestion.css
@@ -1,5 +1,25 @@
-.test-question-option-options {
+.test-question-option {
+  display: block;
   margin-top: 4vh;
+}
+
+.test-question-option-layout {
+  display: flex;
+  margin-top: 4vh;
+}
+
+.test-question-option-options {
+  flex: 0.7;
+}
+
+.test-question-option-img {
+  margin: auto;
+  flex: 0.3;
+  padding-left: 20px;
+}
+
+.test-question-option-img img {
+  width: 25vw;
 }
 
 .test-question-option-config span {
