--- a/SchoolTestManagementApp/ClientApp/src/Pages/Auth/Auth.css
+++ b/SchoolTestManagementApp/ClientApp/src/Pages/Auth/Auth.css
@@ -1,7 +1,7 @@
 .home-container {
   width: 100%;
   height: 100%;
-  background: linear-gradient(#5794c9, #787bca);
+  background: linear-gradient(#3d4652, #dbdbdb);
 }
 
 .home-auth {
