work on archive button

--- a/SchoolTestManagementApp/ClientApp/src/Components/Tests/DesignTest/DesignTest.css
+++ b/SchoolTestManagementApp/ClientApp/src/Components/Tests/DesignTest/DesignTest.css
@@ -68,6 +68,7 @@
 .test-design-content {
   width: 85%;
   height: 100%;
+  position: relative;
   margin: 0 auto;
   padding: 10px;
   background-color: white;
