--- a/SchoolTestManagementApp/ClientApp/src/Components/Tests/DesignTest/Options/Questions/Questions.css
+++ b/SchoolTestManagementApp/ClientApp/src/Components/Tests/DesignTest/Options/Questions/Questions.css
@@ -102,9 +102,12 @@
 
 .questions-btn {
   display: flex;
-  float: right;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  padding: 0 15px 15px 0px;
 }
 
-.questions-btn Button:last-child {
-  margin-left: 10px;
+.questions-btn Button:first-child {
+  margin-right: 10px;
 }
