--- a/SchoolTestManagementApp/ClientApp/src/Components/Tests/DesignTest/Options/Settings/Settings.css
+++ b/SchoolTestManagementApp/ClientApp/src/Components/Tests/DesignTest/Options/Settings/Settings.css
@@ -45,5 +45,12 @@
 
 .settings-btn {
   display: flex;
-  float: right;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  padding: 0 15px 15px 0px;
+}
+
+.settings-btn Button:first-child {
+  margin-right: 10px;
 }
