--- a/SchoolTestManagementApp/ClientApp/src/Components/Core/InputImage/InputImage.css
+++ b/SchoolTestManagementApp/ClientApp/src/Components/Core/InputImage/InputImage.css
@@ -1,4 +1,4 @@
-.input-image {
+.input-image-layout {
   width: 100%;
   height: 100%;
   position: relative;
@@ -10,20 +10,19 @@
 }
 
 .img-label {
-  /* width: 50%; */
   width: 180px;
   margin: auto;
   border-radius: 10px;
+  cursor: pointer;
 }
 
-.input-image input {
+.input-image-layout input {
   display: none;
 }
 
 .input-image {
   width: 100%;
   object-fit: contain;
-  cursor: pointer;
   border: 2px solid transparent;
   border-radius: 10px;
 }
