--- a/SchoolTestManagementApp/ClientApp/src/Components/Core/Notification/Notification.css
+++ b/SchoolTestManagementApp/ClientApp/src/Components/Core/Notification/Notification.css
@@ -5,6 +5,7 @@
   background-color: white;
   padding: 10px;
   opacity: 1;
+  visibility: visible;
   position: fixed;
   z-index: 11;
   top: 10vh;
@@ -14,6 +15,7 @@
 
 .pop-up-transparent {
   opacity: 0;
+  visibility: hidden;
 }
 
 .pop-up-grade-error > p {
