--- a/SchoolTestManagementApp/ClientApp/src/Components/Students/Students.css
+++ b/SchoolTestManagementApp/ClientApp/src/Components/Students/Students.css
@@ -5,15 +5,12 @@
 
 .students-top {
   width: 100%;
-  height: 13vh;
-  display: flex;
-  justify-content: space-between;
+  height: 17vh;
   align-items: center;
   padding: 20px 10px;
 }
 
 .students-top-search {
-  height: 10vh;
   padding: 10px;
   position: relative;
 }
@@ -23,9 +20,19 @@
   padding-left: 43px;
 }
 
+.students-sort-by-class {
+  padding: 10px;
+}
+
+.students-sort-by-class-select {
+  padding: 3px;
+  margin-left: 10px;
+  cursor: pointer;
+}
+
 .student-layout {
   width: 100%;
-  height: calc(100% - 13vh);
+  height: calc(100% - 17vh);
   display: flex;
 }
 
@@ -64,6 +71,12 @@
   grid-row-gap: 2vh;
   grid-auto-flow: row;
   flex: 8 1;
+}
+
+.students-related-empty {
+  margin: 6vh 0 0 2vw;
+  font-size: 25px;
+  font-weight: 100;
 }
 
 @media (min-width: 925px) {
