--- a/SchoolTestManagementApp/ClientApp/src/Components/Profile/Settings/Settings.css
+++ b/SchoolTestManagementApp/ClientApp/src/Components/Profile/Settings/Settings.css
@@ -20,5 +20,11 @@
 .btn-back-tests {
   position: absolute;
   bottom: 15px;
-  right: 10vw;
+  right: 7vw;
+}
+
+@media (max-height: 620px) {
+  .btn-back-tests {
+    right: 12vw;
+  }
 }
