--- a/SchoolTestManagementApp/ClientApp/src/Components/Tests/DesignTest/Options/Questions/Question/Card/Card.css
+++ b/SchoolTestManagementApp/ClientApp/src/Components/Tests/DesignTest/Options/Questions/Question/Card/Card.css
@@ -74,3 +74,17 @@
 .remove-icon:hover {
   font-size: 25px;
 }
+
+@media (max-height: 620px) {
+  .question-card-content h2 {
+    font-size: 20px;
+  }
+
+  .question-card-content h3 {
+    font-size: 18px;
+  }
+
+  .question-card-content h6 {
+    font-size: 10px;
+  }
+}
