--- a/SchoolTestManagementApp/ClientApp/src/Pages/Auth/Login/Login.css
+++ b/SchoolTestManagementApp/ClientApp/src/Pages/Auth/Login/Login.css
@@ -1,9 +1,10 @@
 ﻿.login-content {
   width: 65%;
-  height: 33%;
+  height: fit-content;
   margin: 0 auto;
   border-radius: 6px;
   background: #00000040;
+  padding-bottom: 10px;
 }
 
 .login-title {
@@ -23,6 +24,7 @@
 
 .login-error {
   height: 3vh;
+  margin-bottom: 10px;
 }
 
 .login-error p {
